# COMP472

./: .gitignore  README.md
a1/: README.md  README.rst  create_all_output.sh  grid1.txt  grid2.txt  pyproject.toml
a1/a1/: basedt.py  basemlp.py  bestdt.py  bestmlp.py  gridsearch.py  main.py  modelenum.py  modeltrainer.py  naivebayes.py  perceptron.py  plotDataset.py  util.py
a1/a1.egg-info/: PKG-INFO  SOURCES.txt
a1/dataset/: 90.csv
a1/exports/: train_1-BaseDT.dot  train_1-BestDT.dot  train_2-BaseDT.dot  train_2-BestDT.dot
a1/tests/: test_a1.py
a2/: README.md  create_output.sh  pyproject.toml
a2/a2/: data_structure.py  game_node.py  heuristic.py  main.py  metrics.py  num_gen.py  output_files.py  priority_queue.py  search.py  state_space.py
a2/a2/decorator/: timed.py
a2/in/: competitionPuzzles.txt  puzzle.txt  puzzle1.txt  puzzle_10x10.txt  puzzle_2x4.txt  puzzle_3x3.txt  puzzle_3x4.txt  puzzle_4x4.txt  puzzle_5x2.txt  puzzle_5x3.txt  puzzle_5x5.txt  puzzle_6x2.txt  puzzle_6x3.txt  puzzle_6x6.txt  puzzle_7x7.txt  puzzle_8x8.txt  puzzle_9x9.txt  puzzle_demo.txt  puzzle_final.txt  puzzle_short.txt
a2/tests/: test_a2.py  test_data_structure.py  test_heuristic.py  test_main.py  test_search.py  test_state_space.py
a3/: README.md  create_all_output.sh  pyproject.toml
a3/a3/: predict.py  train.py
a3/a3/model/: bayes.pickle
a3/a3/naibebayes/: datapoint.py  (+1 more)
a3/in/: test_set00.tsv
a3/model/: bayes.pickle  bayes_filtered.pickle  demo-model-FV.pickle  demo-model-OV.pickle  model-FV.pickle  model-OV.pickle  model.pickle
a3/tests/: test_a3.py
(+6 files in other folders)
