[tool.poetry]
name = "a1"
version = "0.1.0"
description = ""
authors = ["FGRCL <35940434+FGRCL@users.noreply.github.com>"]

[tool.poetry.scripts]
plot = "a1.plotDataset:main"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
scikit-learn = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
